alignment fixes

--- a/css/style.css
+++ b/css/style.css
@@ -74,7 +74,7 @@ body {
 }
 
 .links {
-    margin-top: 20px;
+    margin-top: 15px;
     display: grid;
     grid-template-columns: repeat(2, 70px);
     grid-template-rows: 60px 11.2px;
@@ -186,10 +186,10 @@ body {
 
 .footer-content {
     margin: 15px 30px 0 30px;
-    height: 85px;
+    height: 80px;
     width: calc(100vw - 60px);
     display: grid;
-    grid-template-rows: repeat(3, 26px);
+    grid-template-rows: repeat(3, 1fr);
     grid-template-columns: repeat(2, calc(50vw - 30px));
 }
 
